--- a/package.json
+++ b/package.json
@@ -5,18 +5,25 @@
   "main": "plugin.js",
   "scripts": {
     "example": "node example.js",
-    "test:unit": "standard && tap test.js",
-    "test": "npm run test:unit"
+    "lint": "standard",
+    "test:unit": "tap test/*.test.js test/*/*.test.js",
+    "test": "npm run lint && npm run test:unit"
   },
   "dependencies": {
     "fastify-plugin": "^0.2.2",
-    "node-nats-streaming": "^0.0.26"
+    "node-nats-streaming": "^0.0.28"
   },
   "devDependencies": {
     "fastify": "^0.43.0",
-    "request": "^2.83.0",
-    "standard": "^10.0.3",
-    "tap": "^11.1.0"
+    "request": "^2.85.0",
+    "standard": "^11.0.1",
+    "tap": "^11.1.3"
+  },
+  "peerDependencies": {
+    "ajv": "^5.0.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.6.1"
   },
   "homepage": "https://github.com/smartiniOnGitHub/fastify-nats-streaming#readme",
   "repository": {
