--- a/package.json
+++ b/package.json
@@ -4,26 +4,24 @@
   "description": "Fastify plugin for using NATS Streaming",
   "main": "plugin.js",
   "scripts": {
-    "example": "node example.js",
-    "lint": "standard",
+    "example": "node example/example",
+    "lint": "standard \"./*.js\" \"./src/**/*.js\" \"./test/**/*.test.js\" \"./example/**/*.js\"",
     "test:unit": "tap test/*.test.js test/*/*.test.js",
     "test": "npm run lint && npm run test:unit"
   },
   "dependencies": {
     "fastify-plugin": "^0.2.2",
-    "node-nats-streaming": "^0.0.28"
+    "node-nats-streaming": "^0.0.40"
   },
   "devDependencies": {
     "fastify": "^0.43.0",
-    "request": "^2.85.0",
+    "simple-get": "^3.0.2",
     "standard": "^11.0.1",
-    "tap": "^11.1.3"
+    "tap": "^12.0.1"
   },
-  "peerDependencies": {
-    "ajv": "^5.0.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.6.1"
+  "peerDependencies": {},
+  "engines": {
+    "node": ">=8.11.3"
   },
   "homepage": "https://github.com/smartiniOnGitHub/fastify-nats-streaming#readme",
   "repository": {
