--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "src/plugin",
   "scripts": {
     "example": "node example/example",
+    "nats-streaming:run": "docker run --rm --name nats-streaming -d -p 4222:4222 -p 8222:8222 nats-streaming",
+    "nats-streaming:log": "docker logs --follow --tail=1000 nats-streaming",
+    "nats-streaming:stop": "docker kill nats-streaming",
+    "nats-streaming:clean": "docker rmi nats-streaming",
     "lint": "standard \"./*.js\" \"./src/**/*.js\" \"./test/**/*.test.js\" \"./example/**/*.js\"",
     "test:unit": "tap -J test/*.test.js test/*/*.test.js",
     "test": "npm run lint && npm run test:unit"
