--- a/.npmignore
+++ b/.npmignore
@@ -43,8 +43,8 @@ TODO.*
 BUILD.md
 
 .dockerignore
-Dockerfile
-Dockerfile.*
+# Dockerfile
+# Dockerfile*.*
 Jenkinsfile
-Jenkinsfile.*
+Jenkinsfile*.*
 /jenkins
